packages/tree-sitter/behavior/test/corpus/basic.txt
================================================================================
merge preamble
================================================================================

merge "phases/planning.behavior"
merge "phases/review.behavior"

--------------------------------------------------------------------------------

(behavior_file
  (merge_decl
    path: (filename))
  (merge_decl
    path: (filename)))



================================================================================
oriented state mínimo (goal + interact + handlers)
================================================================================

state responsive
  goal "Help the user"
  interact
  on intent "request" transition to responsive
  on offtopic transition to responsive

--------------------------------------------------------------------------------

(behavior_file
  (state_decl
    name: (state_name
      (identifier))
    body: (state_body
      (oriented_state_body
        (goal_stmt
          text: (quoted_string))
        (interact_stmt)
        (intent_handler
          intent: (quoted_string)
          (transition_stmt
            state: (state_name
              (identifier))))
        (offtopic_handler
          (transition_stmt
            state: (state_name
              (identifier))))))))



================================================================================
oriented state completo (goal + guide + teach + interact + handlers)
================================================================================

state car_search
  goal "Find available cars"
  guide "car_guide.md"
  teach "premium_features.md"
  interact
  on intent "select" transition to reservation
  on offtopic transition to responsive

--------------------------------------------------------------------------------

(behavior_file
  (state_decl
    name: (state_name
      (identifier))
    body: (state_body
      (oriented_state_body
        (goal_stmt
          text: (quoted_string))
        (guide_stmt
          text: (quoted_string))
        (teach_stmt
          text: (filename))
        (interact_stmt)
        (intent_handler
          intent: (quoted_string)
          (transition_stmt
            state: (state_name
              (identifier))))
        (offtopic_handler
          (transition_stmt
            state: (state_name
              (identifier))))))))



================================================================================
setup state (actions + transition, no interact)
================================================================================

state prepare_data
  run script "fetch.sh"
  set context.cars = "options"
  transition to car_search

--------------------------------------------------------------------------------

(behavior_file
  (state_decl
    name: (state_name
      (identifier))
    body: (state_body
      (block
        (statement
          (run_stmt
            type: (run_type)
            target: (quoted_string)))
        (statement
          (memory_stmt
            target: (memory_target
              domain: (memory_domain)
              var: (identifier))
            op: (assignment_op)
            value: (expression
              (value
                (with_quotes_string)))))
        (statement
          (transition_stmt
            state: (state_name
              (identifier))))))))



================================================================================
setup state with conditional
================================================================================

state check
  if session.has_context == true
    transition to proceed
  else
    transition to fallback
  end

--------------------------------------------------------------------------------

(behavior_file
  (state_decl
    name: (state_name
      (identifier))
    body: (state_body
      (block
        (statement
          (conditional_stmt
            condition: (condition
              (expression
                left: (value
                  (state_name
                    (identifier)
                    (identifier)))
                op: (comparison_op)
                right: (value
                  (boolean))))
            then: (block
              (statement
                (transition_stmt
                  state: (state_name
                    (identifier)))))
            else: (block
              (statement
                (transition_stmt
                  state: (state_name
                    (identifier)))))))))))



================================================================================
global trigger com event
================================================================================

on event "session.ended"
  run script "cleanup.sh"

--------------------------------------------------------------------------------

(behavior_file
  (trigger_decl
    event: (quoted_string)
    block: (block
      (statement
        (run_stmt
          type: (run_type)
          target: (quoted_string))))))



================================================================================
state com dotted path name (oriented)
================================================================================

state phases.planning.start
  goal "Start planning"
  interact
  on intent "next" transition to phases.planning.end
  on offtopic transition to phases.planning.start

--------------------------------------------------------------------------------

(behavior_file
  (state_decl
    name: (state_name
      (identifier)
      (identifier)
      (identifier))
    body: (state_body
      (oriented_state_body
        (goal_stmt
          text: (quoted_string))
        (interact_stmt)
        (intent_handler
          intent: (quoted_string)
          (transition_stmt
            state: (state_name
              (identifier)
              (identifier)
              (identifier))))
        (offtopic_handler
          (transition_stmt
            state: (state_name
              (identifier)
              (identifier)
              (identifier))))))))



================================================================================
intent handler com block body
================================================================================

state conversational
  goal "Chat with the user"
  interact
  on intent "help"
    run script "log.sh"
    transition to support
  on offtopic transition to responsive

--------------------------------------------------------------------------------

(behavior_file
  (state_decl
    name: (state_name
      (identifier))
    body: (state_body
      (oriented_state_body
        (goal_stmt
          text: (quoted_string))
        (interact_stmt)
        (intent_handler
          intent: (quoted_string)
          block: (block
            (statement
              (run_stmt
                type: (run_type)
                target: (quoted_string)))
            (statement
              (transition_stmt
                state: (state_name
                  (identifier))))))
        (offtopic_handler
          (transition_stmt
            state: (state_name
              (identifier))))))))
